test/tests/stages/14_pointers/valid/declarators/declare_pointer_in_for_loop.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[40]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(10)
  ;
  for
  (
  int
  *
  identifier(i)
  =
  &
  identifier(x)
  ;
  identifier(i)
  !=
  const int(0)
  ;
  )
  {
  *
  identifier(i)
  =
  const int(5)
  ;
  identifier(i)
  =
  const int(0)
  ;
  }
  return
  identifier(x)
  ;
  }
