test/tests/stages/14_pointers/invalid_types/assign_int_to_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(x)
  ;
  identifier(x)
  =
  const int(10)
  ;
  return
  const int(0)
  ;
  }
